# infotecs

./: CMakeLists.txt
src/lib/: lib.cpp  lib.h
src/program1/: main.cpp
src/program2/: main.cpp
